syntax = "proto3";

package item;

import "google/protobuf/timestamp.proto";

message Item {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    float quantity = 5;

    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateItemRequest {
    string name = 1;
    string description = 2;
    int32 price = 3;
    float quantity = 4;
}

message FindRequest {
    int64 id = 1;
    string name = 2;
}

message FindResponse {
    repeated Item item = 1;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string price = 4;
    string quantity = 5;
}

message UpdateResponse {
    Item item = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    Item item = 1;
}

message BuyRequest {
    string id = 1;
    string ccNumber = 2;
    string ccName = 3;
}

message BuyResponse {
    Item item = 1;
    string message = 2;
}

